# hackagames-1

./: .gitignore  BOARD.md  CMakeLists.txt  Doxyfile  LICENCE.md  PROJECT.md  README.md  README_risky_AI.md  defeats.txt  install.md  large_advantages.txt  large_disadvantages.txt  myPlayer.py  otherPlayerAI.py  project-outline.md  script.py  slight_advantages.txt  slight_disadvantages.txt  test.py  trained_qvalues_bis.json  wins.txt
core-include/: hackagames-geometry.h  hackagames-interface.h  hackagames-server.h  hackagames-tabletop.h  hackagames.h
core-src/: hg-game.c  hg-inter-interface.c  hg-ser-game.c  hg-tab-organism.c  hki-interface.c  khs-game.c  main-draft.c  main-play.c  main-playZ.c  main-zplay.c
game-risky/: README.md  confront.py  simplePlayer.py
games/421/: README.md  game421.py  play.py  playGame.py  player.py  player421.py
games/morpion/: README.md
games/navgraph/src/: main-navgraph.c
games/risky/: CMakeLists.txt  README.md  confront.py  firstPlayerIA.py  launch.py  play.py  simplePlayer.py  testOnce.py  todo-lst.md
games/risky/pyrisky/: client.py  player.py
games/risky/src/: main-easy.c  main-risky.c  risky.c  risky.h
games/squad/: README.md
hackagames/: __init__.py  abstract.py  client.py
interface-python/: client.py  player.py
pyHackaGames/: player.py  test.py
pyhackagames/: player.py
python/: draft.py  sleeperClient.py  test.py
python/toghap/: __init__.py
src/: dependancy.h  game.c  game.h  geometry.c  geometry.h  hackagames_interface.c  hackagames_interface.h  organism.c  organism.h
